@@ -31,6 +31,7 @@ $ -> Language fix or change
  ^ Fixed new registered type in User Options to be able to select any group.
  ^ Added check to group delete to ensure that Public and Registered can't be removed.
  # Fixed bug in com_users registration controller.
+ # Fixed bugs in com_users router.
 
 23-Oct-2009 Ron Severdia
 ^ Removed Austere template
